feat: get all members settings of organ
This adds the endpoint getMembersSettings to get the settings for all
users in an organ.
